crates/keron-lang/tests/corpus/errors/check/user_fn_collides_with_symlink_builtin.keron
from "std:fs" use symlink

fn symlink(): Int { 1 }